# feder-und-kraut

api/: Cargo.toml
frontend/: package-lock.json
frontend/src/: app.css
frontend/src/lib/: Navbar.svelte  Slide.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
