[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
sqlx = "0.8.6"
chrono = "0.4.41"
validator = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4"] }
dotenvy = "0.15.7"
